--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             <a href="https://www.marxists.org/reference/archive/mao/selected-works/volume-4/mswv4_22.htm" target="_blank">Manifesto of the Chinese
                 People's Liberation Army!</a> 
 
+        <br><br>
+            <a href="https://www.its.caltech.edu/~matilde/ScaleAnarchy.pdf" target="_blank">THE PROBLEM OF SCALE IN ANARCHISM
+AND THE CASE FOR CYBERNETIC COMMUNISM</a> 
+
         </p>
 
         <img src="src/images/thumbs_up.jpg" alt="image" style="width:500px;" title="hey cutie <3" onclick="clicked()">
