--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>
-            noahvsb
-        </title>
-        <link rel="stylesheet" href="src/styles.css">
-    </head>
-    <body>
-        <p>
-            <a href="https://noahvsb.github.io/" target="_blank">recommended site</a> <b>10/10</b>
-            <br>
-            <small>- me</small>
-            <br><br>
-            <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">other recommended site</a> <b>10/10</b>
-            <br>
-            <small>- Kaya-Sem</small>
-            <br><br>
-            <a href="https://www.marxists.org/reference/archive/mao/selected-works/volume-4/mswv4_22.htm" target="_blank">Manifesto of the Chinese
-                People's Liberation Army!</a> 
+
+<head>
+    <title>
+        noahvsb
+    </title>
+    <link rel="stylesheet" href="src/styles.css">
+</head>
+
+<body>
+    <p>
+        <a href="https://noahvsb.github.io/" target="_blank">recommended site</a> <b>10/10</b>
+        <br>
+        <small>- me</small>
+        <br><br>
+        <a href="https://www.youtube.com/watch?v=oHg5SJYRHA0" target="_blank">other recommended site</a> <b>10/10</b>
+        <br>
+        <small>- Kaya-Sem</small>
+
 
         <br><br>
-            <a href="https://www.its.caltech.edu/~matilde/ScaleAnarchy.pdf" target="_blank">THE PROBLEM OF SCALE IN ANARCHISM
-AND THE CASE FOR CYBERNETIC COMMUNISM</a> 
+        <a href="https://kaya-sem.com/" target="_blank">a fantastic site</a> <b>10/10</b>
+        <br>
+        <small>- Everyone</small>
+        <br><br>
+        <a href="https://www.marxists.org/reference/archive/mao/selected-works/volume-4/mswv4_22.htm"
+            target="_blank">Manifesto of the Chinese
+            People's Liberation Army!</a>
 
-        </p>
+        <br><br>
+        <a href="https://www.its.caltech.edu/~matilde/ScaleAnarchy.pdf" target="_blank">THE PROBLEM OF SCALE IN
+            ANARCHISM
+            AND THE CASE FOR CYBERNETIC COMMUNISM</a>
 
-        <img src="src/images/thumbs_up.jpg" alt="image" style="width:500px;" title="hey cutie <3" onclick="clicked()">
-    </body>
+    </p>
+
+    <img src="src/images/thumbs_up.jpg" alt="image" style="width:500px;" title="hey cutie <3" onclick="clicked()">
+</body>
+
 </html>
