--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         noahvsb
     </title>
     <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="https://groep33.webdev.ilabt.imec.be/css/mdb.css"> <!-- BELANGRIJK -->
 </head>
 
 <body>
@@ -40,7 +41,7 @@
     </p>
 
     <img src="src/images/thumbs_up.jpg" alt="image" style="width:500px;" title="hey cutie <3" onclick="clicked()">
-		<img src="src/images/ally.jpg" alt="ally" style="width:500px;" title="This cutie <3">
+		<img src="src/images/ally.jpg" alt="ally" style="height:321px;" title="This cutie <3">
 </body>
 
 </html>
