afbeeldingen hebben dezelfde hoogte

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 
     <img src="src/images/thumbs_up.jpg" alt="image" style="width:500px; transition: transform 0.5s;"
         title="hey cutie <3" onclick="clicked(this)">
-    <img src="src/images/ally.jpg" alt="ally" style="width:500px; transition: transform 0.5s;" title="This cutie <3"
+    <img src="src/images/ally.jpg" alt="ally" style="height:321px; transition: transform 0.5s;" title="This cutie <3"
         onclick="clicked(this)">
 
 
 
 
-    <img src="src/images/livepeterreaction.gif" alt="image" style="width:500px; transition: transform 0.5s;"
+    <img src="src/images/livepeterreaction.gif" alt="image" style="height:321px; transition: transform 0.5s;"
         title="Live Peter Reaction" onclick="clicked(this)">
 
     <script>
